# llmnewsarena

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: arena_smoke.py  backtest.py  check_account.py  close_paper_positions.py  compare_models.py  compare_runs.py  control_arms.py  earnings_bench.py  edge_report.py  exit_lab.py  gate_sweep.py  inject_news.py  list_sources.py  mine_exemplars.py  missed.py  multisample.py  optimize.py  rubric_judge.py  slippage_report.py  smoke_providers.py  smoke_test.py  telegram_login.py  token_report.py
src/hlbot/: __init__.py  bus.py  config.py  main.py  main_arena.py  models.py  pipeline.py
src/hlbot/analysis/: analyzer.py  burst.py  market_context.py  pricing.py  prompts.py  regime.py  universe.py  usage_ledger.py
src/hlbot/arena/: __init__.py  lane.py  pipeline.py
src/hlbot/news/: dedup.py  (+2 more)
tests/: conftest.py  test_account_value.py  test_analyzer_mapping.py  test_analyzer_retry.py  test_arena.py  test_arena_chart_js.py  test_audit_fixes.py  test_backtest.py  test_backtest_resume.py  test_breakeven.py  test_burst.py  test_catalyst_memory.py  test_confirm.py  test_dedup.py  test_edge.py  test_exchange_stop.py  test_executor.py  test_exit_variants.py  test_lowfixes.py  test_metrics.py  test_models.py  test_move_guard.py  test_optimizer.py  test_persistence.py  test_pipeline_async.py  test_prompts.py  test_providers.py  test_risk.py  test_safeguards.py  test_slippage_report.py  test_speed_cost.py  test_telegram_commands.py  test_telegram_source.py  test_ui.py  test_universe.py
(+22 files in other folders)
